# EntityComponentSystem

./: CMakeLists.txt  EntityComponentSystem.cpp  EntityComponentSystem.h
include/: Archetype.h  ArchetypeManager.h  Entity.h  EntityManager.h  EntityQuery.h  ExecutionContext.h  Fragment.h  Processor.h
src/: ArchetypeManager.cpp  EntityManager.cpp  EntityQuery.cpp  Processor.cpp
